Purchase feature added